# family-chores

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DOCS.md  Dockerfile  INSTALL.md  PROMPT.md  PROMPT_PHASE2.md  README.md  SECURITY.md  TODO_POST_REFACTOR.md  config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  repository.yaml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/saas-backend/: README.md  pyproject.toml
apps/saas-backend/src/family_chores_saas/: __init__.py  app_factory.py  auth.py
apps/saas-backend/tests/: test_smoke.py
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  (+1 more)
backend/: alembic.ini  pyproject.toml
backend/src/family_chores/: __init__.py  __main__.py  app.py  config.py  scheduler.py  security.py
backend/src/family_chores/api/: __init__.py  admin.py  auth.py  chores.py  deps.py  events.py  instances.py  members.py  schemas.py  ws.py
backend/src/family_chores/core/: points.py  streaks.py  time.py
backend/src/family_chores/db/: base.py  models.py
backend/src/family_chores/db/migrations/: env.py
backend/src/family_chores/db/migrations/versions/: 0001_initial_schema.py
backend/src/family_chores/ha/: __init__.py  bridge.py  reconcile.py
backend/src/family_chores/services/: instance_actions.py  instance_service.py
backend/src/family_chores/static/: index.html
backend/tests/: _ha_fakes.py  conftest.py  test_api_admin.py  test_api_chores.py  test_api_errors.py  test_api_instances.py  test_api_ws.py  test_ha_bridge.py  test_ha_client.py  test_ha_integration.py  test_ha_reconcile.py  test_instance_actions.py  test_instance_service.py  test_lifespan_integration.py  test_models.py  test_points.py  test_recurrence.py  test_rollover.py  test_startup_recovery.py
docs/: architecture.md  calendar.md  roadmap.md
family_chores/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml  run.sh
family_chores/backend/: pyproject.toml
family_chores/backend/src/family_chores/: app.py  scheduler.py  security.py
family_chores/backend/src/family_chores/api/: admin.py  auth.py  chores.py  instances.py  members.py  schemas.py
family_chores/backend/src/family_chores/core/: __init__.py  recurrence.py
family_chores/backend/src/family_chores/db/: __init__.py  models.py  startup.py
family_chores/backend/src/family_chores/db/migrations/: env.py
family_chores/backend/src/family_chores/db/migrations/versions/: 0002_add_member_ha_todo_entity_id.py
family_chores/backend/src/family_chores/ha/: bridge.py  reconcile.py
family_chores/backend/src/family_chores/services/: instance_actions.py  instance_service.py  rollover_service.py  stats_service.py
family_chores/backend/src/family_chores/static/: index.html  manifest.webmanifest
family_chores/backend/src/family_chores/static/assets/: index--16L8Xri.js  index-DjtwDE_9.css  index-R7_pteJ9.css  index-juGJvTQJ.js
family_chores/backend/tests/: conftest.py  test_api_auth.py  test_ha_bridge.py  test_ha_integration.py  test_ha_reconcile.py  test_instance_actions.py  test_instance_service.py  test_rollover.py  test_scheduler.py  test_startup_recovery.py  test_streaks.py
family_chores/frontend/: eslint.config.js  package.json  tailwind.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
family_chores/frontend/src/api/: client.test.ts  hooks.ts  types.ts
family_chores/frontend/src/app/: App.tsx  AppShell.tsx  routes.tsx
family_chores/frontend/src/components/: AnimatedTitle.tsx  BrowseSuggestionsPanel.test.tsx  BrowseSuggestionsPanel.tsx  CalendarDayList.test.tsx  CalendarDayList.tsx  CalendarEntityIdsEditor.test.tsx  CalendarEntityIdsEditor.tsx  CelebrationAllDone.tsx  ChoreCard.tsx  Confetti.tsx  Cowbell.tsx  DecorativeBackground.tsx  ErrorBoundary.tsx  ManageSuggestionsView.test.tsx  ManageSuggestionsView.tsx  MemberTile.tsx  MonthGrid.test.tsx  MonthGrid.tsx  PinPad.test.tsx  PinPad.tsx  PrepChipStrip.test.tsx  PrepChipStrip.tsx  ProgressRing.test.tsx  SoundToggle.tsx  UndoToast.tsx
family_chores/frontend/src/hooks/: useChime.ts  useFirstRunBadge.test.ts  useFirstRunBadge.ts
family_chores/frontend/src/store/: kidPin.test.ts  kidPin.ts  parent.test.ts
family_chores/frontend/src/styles/: globals.css
family_chores/frontend/src/test/: setup.ts
family_chores/frontend/src/views/: MemberRewards.tsx  MemberView.tsx  ParentView.tsx  TodayView.tsx
family_chores/frontend/src/views/parent/: ActivityTab.tsx  ApprovalQueue.tsx  CalendarTab.tsx  ChoresTab.tsx  MembersTab.tsx  ParentGate.tsx  RewardsTab.tsx
family_chores/frontend/src/ws/: provider.tsx
family_chores/src/family_chores_addon/: __main__.py  app.py  auth.py  config.py  scheduler.py
family_chores/src/family_chores_addon/ha/: __init__.py  bridge.py  calendar.py  client.py  reconcile.py  todo.py
family_chores/tests/: _ha_fakes.py  conftest.py  test_api_calendar.py  test_api_chores.py  test_api_household_settings.py  test_api_member_pin.py  test_api_members.py  test_api_rewards.py  test_api_suggestions.py  test_api_today_calendar.py  test_ha_bridge.py  test_ha_calendar_provider.py  test_ha_client.py  test_ha_integration.py  test_ha_reconcile.py  test_ha_todo_provider.py  test_household_scoping.py  test_instance_actions.py  test_instance_service.py  test_lifespan_integration.py  test_rollover.py  test_scheduler.py  test_seeding.py  test_template_no_ha_sync.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.js  main.tsx
lovelace-card/: CHANGELOG.md  README.md  hacs.json  info.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
lovelace-card/src/: family-chores-card-editor.ts  family-chores-card.ts
scripts/: dev_backend.sh  dev_frontend.sh  lint.sh  probe_ha.py
tests/: test_dependency_arrows.py  test_packages_clean.py
(+38 files in other folders)
