[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family_chores"
version = "0.1.0"
description = "Family Chores — Home Assistant add-on backend"
requires-python = ">=3.12"
authors = [{ name = "Jason Patton" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.13,<1.14",
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3",
    "apscheduler>=3.10,<4",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "pillow>=10.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-dateutil",
]

[project.scripts]
family-chores = "family_chores.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
family_chores = ["static/**/*", "db/migrations/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["family_chores"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
