[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-chores-addon"
version = "0.1.0"
description = "Family Chores — Home Assistant add-on (composition root)."
requires-python = ">=3.12"
authors = [{ name = "Jason Patton" }]
license = { text = "MIT" }
dependencies = [
    # Workspace deps. See DECISIONS §11 for the refactor sequence.
    #   `family-chores-core`: pure domain logic — added in step 2.
    #   `family-chores-db`:   ORM + migrations + engine factories — added in step 3.
    #   `family-chores-api`:  routers + services + schemas + factory — step 4.
    "family-chores-core",
    "family-chores-db",
    "family-chores-api",
    "fastapi>=0.115,<0.116",
    # Plain `uvicorn` + the two optional deps we actually use at runtime.
    # Avoids `uvicorn[standard]`, which pulls `watchfiles` (Rust-based);
    # armv7 Alpine builds fail because rustup has no prebuilt target for
    # `arm-unknown-linux-musleabihf`. `watchfiles` is only needed for
    # `--reload`, which production doesn't use.
    "uvicorn>=0.30,<0.31",
    "websockets>=12",
    "httptools>=0.6",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.13,<1.14",
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3",
    "apscheduler>=3.10,<4",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    # Pillow + python-multipart were carried for an avatar-upload + re-encode
    # path that was specced in DOCS.md / README.md but never built. F-S003
    # fix: dropped to slim the image (~5 MB Pillow + alpine build-deps for
    # libjpeg/zlib). If avatar uploads land later, re-add both here AND
    # restore the build-deps in family_chores/Dockerfile.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-dateutil",
]

[project.scripts]
family-chores = "family_chores_addon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Migrations now ship with `family-chores-db` (see DECISIONS §11 step 3);
# the addon only ships its built SPA static assets.
family_chores_addon = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = [
    "B008",    # FastAPI `Depends()` in defaults is idiomatic.
    "RUF059",  # `for a, b in ...` where one side is unused is fine in tests.
    "UP042",   # `(str, enum.Enum)` pattern predates StrEnum and works the same.
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["family_chores_addon"]
mypy_path = "src"
# `import-untyped` fires per-call-site when a third-party package has no
# py.typed marker. The idiomatic fix (per-line `# type: ignore`) goes
# stale when the library gains types in a patch release — which is what
# happened with apscheduler between local (3.11.2, untyped) and CI
# (typed build). Silence globally here; there aren't many untyped-import
# bugs worth catching at call sites anyway.
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
# Apscheduler still lacks a py.typed marker on some builds; silence the
# follow-import complaint in addition to the call-site `import-untyped`.
module = ["apscheduler.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
